--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
 	<properties>
 	  <!-- release> -->
-		<!-- <matsim.version>11.0</matsim.version> -->
+		<matsim.version>12.0-SNAPSHOT</matsim.version>
 
 	  <!--weekly "release":-->
-	  <matsim.version>12.0-2019w41-SNAPSHOT</matsim.version>
+	  <!-- <matsim.version>12.0-2019w41-SNAPSHOT</matsim.version> -->
 	</properties>
 
 	<repositories>
