--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
       	<dependency>
 	    	<groupId>com.github.matsim-vsp</groupId>
 	    	<artifactId>matsim-berlin</artifactId>
-			<version>5.5-SNAPSHOT</version>
+			<version>5.5.x-SNAPSHOT</version>
 		</dependency>
 		
 	</dependencies>
