--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.matsim-vsp</groupId>
 	<artifactId>drt-speed-up</artifactId>
-	<version>v0.0.2</version>
+	<version>v0.0.3-SNAPSHOT</version>
 
 	<name>DRT Speed-up</name>
 	<description>DRT Speed-up</description>
 
 	<properties>
 	  <!-- release> -->
-		<!-- <matsim.version>12.0-SNAPSHOT</matsim.version> -->
+		<matsim.version>12.0-SNAPSHOT</matsim.version>
 
 	  <!--weekly "release":-->
-	  <matsim.version>12.0-2019w49-SNAPSHOT</matsim.version>
+	  <!-- <matsim.version>12.0-2019w49-SNAPSHOT</matsim.version> -->
 	</properties>
 
 	<repositories>
