--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
 	<properties>
 	  <!-- release> -->
-		<matsim.version>12.0-SNAPSHOT</matsim.version>
+		<!-- <matsim.version>12.0-SNAPSHOT</matsim.version>  -->
 
 	  <!--weekly "release":-->
-	  <!-- <matsim.version>12.0-2019w49-SNAPSHOT</matsim.version> -->
+	  <matsim.version>12.0-2020w15-SNAPSHOT</matsim.version>
 	</properties>
 
 	<repositories>
