--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
 	<properties>
 	  <!-- release> -->
 		<!-- <matsim.version>12.0-SNAPSHOT</matsim.version>  -->
+		
+		<!--avoev release":-->
+		<matsim.version>12.0-2020w02-avoev.0</matsim.version>
 
 	  <!--weekly "release":-->
-	  <matsim.version>12.0-2020w15-SNAPSHOT</matsim.version>
+	  <!-- <matsim.version>12.0-2020w15-SNAPSHOT</matsim.version> -->
 	</properties>
 
 	<repositories>
@@ -109,10 +112,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>2.3.2</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<showWarnings>false</showWarnings>
 					<showDeprecation>false</showDeprecation>
 					<encoding>UTF-8</encoding>
