--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 	<description>DRT Speed-up</description>
 
 	<properties>
-	  <!-- release> -->
-		<!-- <matsim.version>12.0-SNAPSHOT</matsim.version>  -->
+		<!-- release> -->
+		<matsim.version>13.0-SNAPSHOT</matsim.version>
 
-	  <!--weekly "release":-->
-	  <matsim.version>13.0-2020w30-SNAPSHOT</matsim.version>
+		<!--weekly "release":-->
+		<!--	  <matsim.version>13.0-2020w30-SNAPSHOT</matsim.version>-->
 	</properties>
 
 	<repositories>
