--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
 	<properties>
 		<!-- release> -->
-		<matsim.version>13.0-SNAPSHOT</matsim.version>
+		<!--		<matsim.version>13.0-SNAPSHOT</matsim.version>-->
 
 		<!--weekly "release":-->
-		<!--	  <matsim.version>13.0-2020w30-SNAPSHOT</matsim.version>-->
+		<matsim.version>13.0-2020w41-SNAPSHOT</matsim.version>
 	</properties>
 
 	<repositories>
